lab02/cau3-microservices-jenkins-k8s/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nt548-gr03
  labels:
    name: nt548-gr03
